// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostHeader - Mobile Snapshots > matches snapshot on mobile viewport 1`] = `
<div
  class="grid w-full max-w-full min-w-0 grid-cols-[minmax(0,1fr)_auto] gap-3 items-start"
  data-testid="container"
>
  <div
    class="w-full max-w-full min-w-0"
  >
    <div
      data-character-limit-placement="metadata"
      data-show-user-info="true"
      data-size="normal"
      data-testid="post-header-user-info"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Snapshot User
      </div>
      <div>
        @
        snapshot
      </div>
    </div>
  </div>
  <div
    class="flex flex-shrink-0 items-center gap-1"
    data-testid="container"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-clock size-4 text-muted-foreground"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M12 6v6l4 2"
      />
    </svg>
    <span
      class="text-xs leading-4 font-medium tracking-widest whitespace-nowrap text-muted-foreground"
      data-testid="typography"
    >
      2h
    </span>
  </div>
</div>
`;

exports[`PostHeader - Snapshots > matches snapshot in loaded state 1`] = `
<div
  class="grid w-full max-w-full min-w-0 grid-cols-[minmax(0,1fr)_auto] gap-3 items-start"
  data-testid="container"
>
  <div
    class="w-full max-w-full min-w-0"
  >
    <div
      data-character-limit-placement="metadata"
      data-show-user-info="true"
      data-size="normal"
      data-testid="post-header-user-info"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Snapshot User
      </div>
      <div>
        @
        snapshot
      </div>
    </div>
  </div>
  <div
    class="flex flex-shrink-0 items-center gap-1"
    data-testid="container"
  >
    <span
      class="flex flex-shrink-0 items-center gap-1"
      data-state="closed"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-clock size-4 text-muted-foreground"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 6v6l4 2"
        />
      </svg>
      <span
        class="text-xs leading-4 font-medium tracking-widest whitespace-nowrap text-muted-foreground"
        data-testid="typography"
      >
        2h
      </span>
    </span>
  </div>
</div>
`;

exports[`PostHeader - Snapshots > matches snapshot in loading state 1`] = `
<div
  class="flex w-full min-w-0 items-start justify-between gap-3"
  data-testid="container"
>
  <div
    class="flex min-w-0 items-center gap-3"
    data-testid="container"
  >
    <div
      class="animate-pulse bg-muted size-10 shrink-0 rounded-full"
      data-slot="skeleton"
    />
    <div
      class="flex flex-col gap-1.5"
      data-testid="container"
    >
      <div
        class="animate-pulse bg-muted h-4 w-24 rounded-md"
        data-slot="skeleton"
      />
      <div
        class="animate-pulse bg-muted h-3 w-16 rounded-md"
        data-slot="skeleton"
      />
    </div>
  </div>
  <div
    class="animate-pulse bg-muted h-3 w-12 rounded-md"
    data-slot="skeleton"
  />
</div>
`;
